--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,7 @@
     <string name="label_logout_success">注销成功</string>
     <string name="error_unable_to_add_more_members">无法添加更多的会议成员</string>
 
+    <string name="label_call_in">呼入</string>
+    <string name="label_call_out">呼出</string>
+
 </resources>
